--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
     }
     polaris-chip {
       margin: 16px;
-    }
+    } 
+    p{
+          color: SaddleBrown; 
+          margin: 20px
+        }
   </style>
   <title>polaris-chip / my-card</title>
 </head>
@@ -35,15 +39,8 @@
   <div class="btn-wrapper">
   <h1 class = "card-Title">The Hermit Crab </h1>
   <my-card>
-    title = "The Hermit Crab"
-    image = "https://upload.wikimedia.org/wikipedia/commons/8/8e/Calliactis_and_Dardanus_001.JPG"
+    <p class="desparh"> While hermit crabs have long life, they are incrdible social and live in large socal groups called clusters or cast.  </p>
   </my-card> 
-  <details ?open="${this.fancy}">
-    <summary>Description</summary>
-    <div>
-      <slot>${this.description}</slot>
-    </div>
-  </details>
   <!-- this is what is bringing in the definition for this tag -->
   <script type="module" src="./src/polaris-chip.js"></script>
   <script type="module" src="./src/my-card.js"></script>
